--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -41,6 +41,7 @@
   flex-direction: column;
   gap: 1rem;
 }
+
 .menuItem {
   display: flex;
   align-items: center;
@@ -51,6 +52,8 @@
   transition: all 300ms ease;
   border-radius: 0.7rem;
   font-size: 14px;
+  text-decoration: none;
+  color: dimgrey;
 }
 
 .menuItem:hover {
