--- a/client/src/components/MainDash/MainDash.css
+++ b/client/src/components/MainDash/MainDash.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1200px) {
