Adding campaign cards and fixing adsetFiltered bug

--- a/client/src/components/Table/Table.css
+++ b/client/src/components/Table/Table.css
@@ -57,6 +57,16 @@ th {
   color: #00b5ff !important;
 }
 
+.fullscreen-modal .modal-dialog {
+  max-width: 90%;
+  width: 90%;
+  margin: auto;
+}
+
+.fullscreen-modal .modal-content {
+  border-radius: 0;
+}
+
 .popup-table td {
   white-space: nowrap;
   overflow: hidden;
