Fixing ads, adsets and responsive bug

--- a/client/src/components/MainDash/MainDash.css
+++ b/client/src/components/MainDash/MainDash.css
@@ -10,11 +10,13 @@
   .MainDash {
     justify-content: flex-start;
     margin-top: 2rem;
+    overflow: visible;
   }
 }
 
 @media screen and (max-width: 768px) {
   .MainDash {
     align-items: center;
+    overflow: visible;
   }
 }
