--- a/client/src/components/Table/Table.css
+++ b/client/src/components/Table/Table.css
@@ -77,6 +77,25 @@ th {
   border-radius: 0;
 }
 
+.datagrid-container {
+  height: 100vh;
+  overflow: auto;
+}
+
+::-webkit-scrollbar {
+  width: 8px; /* Set the width of the scrollbar */
+  height: 8px; /* Set the height of the scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888888; /* Set the color of the scrollbar thumb */
+  border-radius: 4px; /* Set the border radius of the scrollbar thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Set the color of the scrollbar thumb on hover */
+}
+
 .popup-table td {
   white-space: nowrap;
   overflow: hidden;
